tests/atest/rules/errors/missing-keyword-name/test.robot
*** Keywords ***
Keyword
    var
    ${var}
    ${one}      ${two}
    ${var}var
    ${var} var
    ${var}Var
    ${var} Var
